--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,11 @@
 <h1>Tasks#new</h1>
 <p>Find me in app/views/tasks/new.html.erb</p>
+
+<%= simple_form_for @task do |f| %>
+  <%= f.input :title %>
+  <%= f.input :description %>
+  <%= f.number_field :level, in: 1..3, step: 1, value: 1 %>
+  <%= f.hidden_field :user_id, value:  current_user.id %>
+  <%= f.button :submit %>
+<% end %>
+
