--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
 <% if user_signed_in? %>
   Welcome <%= current_user.email %>!
   <%= link_to 'Out', destroy_user_session_path, :method => :delete %>
+  <ul class="nav nav-tabs">
+    <li role="presentation" class="active"> <%= link_to "Main", root_path %> </li>
+    <li role="presentation"> <%= link_to "Home", users_path %> </li>
+    <li role="presentation"><%= link_to "Tasks", tasks_path %></li>
+  </ul>
 <% else %>
   <%= link_to 'Sign in', new_user_session_path %> or <%= link_to 'Sing up', new_user_registration_path %>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
