--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,15 @@
 <h1>Tasks#index</h1>
 <p>Find me in app/views/tasks/index.html.erb</p>
-
-<% @tasks.each do |task| %>
-  <p>
-    <%= link_to task.title, task_path(task) %> | 
-    <%= task.user.email %> |
-    <%= link_to 'Edit', edit_task_path(task) %>
-    <%= link_to 'Delete', task_path(task), method: :delete%>
-  </p>
-<% end %>
+<ul>
+  <% @tasks.each do |task| %>
+    <li>
+      <%= link_to task.title, task_path(task) %> | 
+      <%= task.user.email %> |
+      <%= link_to 'View', task_path(task) %> 
+      <% if my_task?(task, current_user) %>
+        | <%= link_to 'Edit', edit_task_path(task) %>
+        | <%= link_to 'Delete', task_path(task), method: :delete%>
+      <% end %>
+    </li>
+  <% end %>
+</ul>
