add AnswerAttempt logic

--- a/app/views/answer_attempts/index.html.erb
+++ b/app/views/answer_attempts/index.html.erb
@@ -1,4 +1,8 @@
 attempts
 <% @all.each do |x| %>
-  <%= x.value %>
+  <div>
+    <%= x.value %> <br>
+    <%= x.user_id %> <br>
+    <%= x.task_id %> <br>
+  </div>
 <% end %>
