--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -3,7 +3,7 @@
 
 <%= simple_form_for @task do |f| %>
   <%= f.input :title %>
-  <%= f.input :description %>
+  <%= f.input :description, as: :pagedown, input_html: { preview: true, rows: 10 } %>
   <%= f.number_field :level, in: 1..3, step: 1, value: 1 %>
   <%= f.hidden_field :user_id, value:  current_user.id %>
   <%= f.button :submit %>
