--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,10 @@
  *= require_tree .
  *= require_self
  *= require pagedown_bootstrap 
+ *= require token-input-facebook
  */
 
+ textarea {
+    width: 300px;
+    height: 150px;
+  }
