--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 <% if user_signed_in? %>
   Welcome <%= current_user.email %>!
   <%= link_to 'Out', destroy_user_session_path, :method => :delete %>
+  <%= render "layouts/navbar" %>
   <ul class="nav nav-tabs">
     <li role="presentation" class="active"> <%= link_to "Main", root_path %> </li>
     <li role="presentation"> <%= link_to "Home", user_path(current_user) %> </li>
