add Achievement and AchievingRecord models

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,8 @@
 <h1>Tasks#show</h1>
 <p>Find me in app/views/tasks/show.html.erb</p>
 <% my_task = my_task?(@task, current_user)%>
-<div> 
+<div>
+  <%= image_tag("welcome.png")%> 
   <span class="TaskTitle">
     <%= @task.title %>
   </span> 
