--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users#index</h1>
 <p>Find me in app/views/users/index.html.erb</p>
 <% @users.each do |user| %>
-  <%= user.email %>
+  <%= link_to user.email, user_path(user) %>
   <p></p>
 <% end %>
