--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,28 +7,31 @@
   <%= csrf_meta_tags %>
 </head>
 <body class = "center">
-<div>
+<!-- <div>
   <span class="notice"><%= notice %></span>
   <span class="alert"><%= alert %></span>
-</div>
+</div> -->
 <% if user_signed_in? %>
   Welcome <%= current_user.email %>!
-  <%= link_to 'Out', destroy_user_session_path, :method => :delete %>
   <%= render "layouts/navbar" %>
-  <ul class="nav nav-tabs">
-    <li role="presentation" class="active"> <%= link_to "Main", root_path %> </li>
-    <li role="presentation"> <%= link_to "Home", user_path(current_user) %> </li>
-    <li role="presentation"><%= link_to "Tasks", tasks_path %></li>
-    <li role="presentation"><%= link_to "Users", users_path %></li>
-  </ul>
 <% else %>
   <%= link_to 'Sign in', new_user_session_path %> or <%= link_to 'Sing up', new_user_registration_path %>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %>
   <%= link_to "Sign in with Vk", user_omniauth_authorize_path(:vkontakte) %>
 <% end %>
+<% if flash[:notice] %>
+  <div class="alert alert-info" role="alert"><%= flash[:notice] %></div>
+<% end %>
+<% if flash[:message] %>
+  <div class="alert alert-info" role="alert"><%= flash[:message] %></div>
+<% end %>
 
+
+<!-- <div class="alert alert-info" role="alert"><%= notice %></div>
+<div class="alert alert-warning" role="alert"><%= alert %></div>
+<div class="alert alert-warning" role="alert"><%= flash[:message] %></div> -->
 <%= yield %>
-
+<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
