--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Users#index</h1>
+<%= link_to 'Download PDF', download_image_path %>
 <p>Find me in app/views/users/index.html.erb</p>
 <% @users.each do |user| %>
   <%= link_to user.email, user_path(user) %>
