--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,16 +1,24 @@
-<h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
-<ul>
-  <% @tasks.each do |task| %>
-    <li>
-      <%= link_to task.title, task_path(task) %> | 
-      <%= task.user.email %> |
-      <%= link_to 'View', task_path(task) %> 
-      <% if my_task?(task, current_user) %>
-        | <%= link_to 'Edit', edit_task_path(task), data: { no_turbolink: true } %>
-        | <%= link_to 'Delete', task_path(task), method: :delete%>
+<div class="row">
+  <div class="col-xs-3">
+    <h1>Tasks#index</h1>
+    <p>Find me in app/views/tasks/index.html.erb</p>
+  </div>
+  <div class="col-xs-6">
+    <ul>
+      <% @tasks.each do |task| %>
+        <li>
+          <%= link_to task.title, task_path(task) %> | 
+          <%= task.user.email %> |
+          <%= link_to 'View', task_path(task) %> 
+          <% if my_task?(task, current_user) %>
+            | <%= link_to 'Edit', edit_task_path(task), data: { no_turbolink: true } %>
+            | <%= link_to 'Delete', task_path(task), method: :delete%>
+          <% end %>
+        </li>
       <% end %>
-    </li>
-  <% end %>
-</ul>
-<%= link_to 'Create task', new_task_path, data: { no_turbolink: true } %>
+    </ul>
+  </div>
+  <div class="col-xs-3">
+    <%= link_to 'Create task', new_task_path, data: { no_turbolink: true } %>
+  </div>
+</div>
