--- a/app/views/answers/_index.html.erb
+++ b/app/views/answers/_index.html.erb
@@ -2,7 +2,7 @@
 <% @task.answers.each do |answer|%>
   <div> 
     <%= answer.value %> | 
-    <%= link_to 'Edit', edit_answer_path(answer), remote: true, class: "EditAnswerLink", id: answer.id %> |
-    <%= link_to 'Delete', answer_path(answer), method: :delete %> 
+    <%= link_to 'Delete', answer_path(answer), method: :delete %> |
+    <%= link_to 'Edit', edit_answer_path(answer), remote: true, class: "EditAnswerLink", id: answer.id %>  
   </div>
 <% end %>
