--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,8 +17,8 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><%= link_to 'Create task', new_task_path, data: { no_turbolink: true } %></li>
+                    <li><%= link_to 'Download Icon', download_image_path %><li>
                     <li class="divider"></li>
                     <li><%= link_to 'Out', destroy_user_session_path, :method => :delete %></li>               
                 </ul>
