--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,12 +1,9 @@
-<h1>Tasks#new</h1>
-<p>Find me in app/views/tasks/new.html.erb</p>
-
-<%= simple_form_for @task do |f| %>
-  <%= f.input :title %>
-  <%= f.input :tag_list, as: :string, input_html: {
-      data: { tokeninput: { collection: @tags, options: @options } } }
-  %>
-  <%= f.input :description, as: :pagedown, input_html: { preview: true, rows: 10 } %>
-  <%= f.number_field :level, in: 1..3, step: 1, value: 1 %>
-  <%= f.button :submit %>
-<% end %>
+<div class="row">
+  <div class="col-xs-2">
+    <h1>Tasks#new</h1>
+    <p>Find me in app/views/tasks/new.html.erb</p>
+  </div>
+  <div class="col-xs-8">
+    <%= render "task_form"%>
+  </div>
+</div>
