--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-xs-2">
-    <h1>Tasks#new</h1>
-    <p>Find me in app/views/tasks/new.html.erb</p>
+    <div class="col-xs-offset-1">
+      <h3>Create Page</h3>
+    </div>
   </div>
   <div class="col-xs-8">
     <%= render "task_form"%>
