--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-8">
-    MyHome
+    <h1>Main Page:<h1>
   </div>
   <div class="col-xs-4">
     <div class="tags"> 
