add in-place UserName editing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  *= require pagedown_bootstrap 
  *= require token-input-facebook
+ *= require editable/bootstrap-editable
  */
 
 textarea {
