--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
     <div class="col-xs-offset-1">
       <%= @user.rate %>
       Show now!
+      <h3> <%= editable @user, :name %></h3>
       <%= @user.email %>
       <% if current_user.id == @user.id %>
         <%= link_to 'Create task', new_task_path, data: { no_turbolink: true } %>
