add pagination to users and tasks

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,7 @@
         <li><%= link_to user.email, user_path(user) %></li>
       </ul>
     <% end %>
+    <%= paginate @users %>
   </div>
 </div>
 
