--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -6,3 +6,4 @@ $('.modal-backdrop').remove()
 $('#answers').html("");
 $('#answers').html("<%= escape_javascript(render('index')) %>");
 $('#answers').append("<%= escape_javascript(render('add_button')) %>");
+$(".alert").hide();
