--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,14 @@ textarea {
   height: 150px;
 }
 
+.navbar-right a img {
+  height: 25px;
+  width: 25px;
+}
+
+body {
+  overflow-x: hidden;
+}
 .search_image img {
   height: 15px;
 }
