--- a/app/views/answer_attempts/_new.html.erb
+++ b/app/views/answer_attempts/_new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @attempt do |f| %>
-  <%= f.input :value, label: false, autocomplete: "off"  %>
+  <%= f.input :value, label: false %>
   <%= f.hidden_field :task_id, value:  current_task_id %>
   <%= f.button :submit, "Submit" %>
 <% end %>
