--- a/app/views/answers/_edit.html.erb
+++ b/app/views/answers/_edit.html.erb
@@ -1,6 +1,5 @@
 <p>
   <%= simple_form_for @answer do |f| %>
-    <%= f.input :value, label: false, autocomplete: "off" %>
-    <%= f.button :submit %>
+    <%= f.input :value, label: false %>
   <% end %>
 </p>
