--- a/app/views/application/search.html.erb
+++ b/app/views/application/search.html.erb
@@ -12,7 +12,7 @@
           <%= link_to 'View', task_path(task) %> 
           <% if my_task?(task, current_user) %>
             | <%= link_to 'Edit', edit_task_path(task), data: { no_turbolink: true } %>
-            | <%= link_to 'Delete', task_path(task), method: :delete%>
+            | <%= link_to 'Delete', task_path(task), method: :delete, data: { confirm: "Are you sure?" }%>
           <% end %>
         </li>
       <% end %>
