--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,37 +6,54 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <%= link_to "Home", user_path(current_user), class: "navbar-brand" %>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-            <li class="active"><%= link_to "Main", root_path %></li>
-            <li><%= link_to "Tasks", tasks_path %></li>
-            <li><%= link_to "Users", users_path %></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><%= link_to 'Create task', new_task_path, data: { no_turbolink: true } %></li>
-                    <li><%= link_to 'Download Icon', download_image_path %><li>
-                    <li class="divider"></li>
-                    <li><%= link_to 'Out', destroy_user_session_path, :method => :delete %></li>               
-                </ul>
+            <li><%= link_to "Main", root_path %></li>
+            <% if user_signed_in? %>
+                <li><%= link_to "Home", user_path(current_user), data: { no_turbolink: true } %> </li>
+                <li><%= link_to "Tasks", tasks_path %></li>
+                <li><%= link_to "Users", users_path %></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><%= link_to 'Create task', new_task_path, data: { no_turbolink: true } %></li>
+                        <li><%= link_to 'Download Icon', download_image_path %><li>
+                        <li class="divider"></li>
+                        <li><%= link_to 'Out', destroy_user_session_path, :method => :delete %></li>               
+                    </ul>
+                </li>
+            <% end %>
+        </ul>
+        
+        <ul  class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li class="navbar-brand"> Welcome <%= current_user.name %>! </li>
+            <% else %>
+              <li><%= link_to 'Sign in', new_user_session_path %> </li><li><%= link_to 'Sing up', new_user_registration_path %></li>
+              <li><%= link_to image_tag("facebook.png"), user_omniauth_authorize_path(:facebook) %> </li>
+              <li><%= link_to image_tag("twitter.png"), user_omniauth_authorize_path(:twitter) %></li>
+              <li><%= link_to image_tag("vk.png"), user_omniauth_authorize_path(:vkontakte) %></li>
+            <% end %>
+            </li>
+            <li>
+            <% if user_signed_in? %>
+                <form class="navbar-form" role="search" action="/search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" name="q">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <i class="search_image">
+                                    <%= image_tag("glyphicons-28-search.png") %>
+                                </i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            <% end %>
             </li>
         </ul>
-        <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search" action="/search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit">
-                            <i class="search_image">
-                                <%= image_tag("glyphicons-28-search.png") %>
-                            </i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>        
+            
     </div>
 </nav>
