--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-xs-3">
-    <h1>Tasks#index</h1>
-    <p>Find me in app/views/tasks/index.html.erb</p>
+    <div class="col-xs-offset-1">
+      <h2>Tasks:</h2>
+    </div>
   </div>
   <div class="col-xs-6">
     <ul>
@@ -12,7 +13,7 @@
           <%= link_to 'View', task_path(task) %> 
           <% if my_task?(task, current_user) %>
             | <%= link_to 'Edit', edit_task_path(task), data: { no_turbolink: true } %>
-            | <%= link_to 'Delete', task_path(task), method: :delete%>
+            | <%= link_to 'Delete', task_path(task), method: :delete, data: { confirm: "Are you sure?" }%>
           <% end %>
         </li>
       <% end %>
