--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-2">
     <div class="col-xs-offset-1">
-      <h3>Create Page</h3>
+      <h3>Create Task:</h3>
     </div>
   </div>
   <div class="col-xs-8">
