--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,16 +8,18 @@ asdfasdf
       <h1><%= @task.title %></h1>
       creator: 
       <%= link_to @task.user.name,  user_path(@task.user) %>
+      <% if current_user.rate_task?(@task) %>
+        <div id="star">
+          <%= Rating.average_rating(@task.id) %><%= image_tag("star-on.png") %>
+        </div>
+      <% else %>
+        <div id="user_star"></div>
+      <% end %>
     </div>
   </div>
   <div class="col-xs-6">
-    <div id="star"></div>
-    <div id="user_star"></div>
-    <%= render "script"%>
-    <div>
-      <% @task.tags.each do |x| %>
-        <%= x %><br>
-      <% end %>
+    <div class="tags">
+      <% @task.tags.each { |tag| %> <%= link_to tag.name, { :controller => :application, :action => :search, :q => tag.name } %> <% } %>
     </div>
     <%= markdown(@task.description) %>
     <% @task.comments.each do |comment|%>
