--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,10 @@ textarea {
   height: 150px;
 }
 
+span.TaskTitle {
+  font-size: x-large; 
+}
+
 .navbar-right a img {
   height: 25px;
   width: 25px;
@@ -30,12 +34,9 @@ textarea {
 body {
   overflow-x: hidden;
 }
+
 .search_image img {
   height: 15px;
-}
-
-ul.dropdown-menu li a {
-  color: blue;
 }
 
 .css1 { font-size: 1.0em; }
