--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Dropdown <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
+                        <li><%= link_to 'Change_style', change_style_path %><li>
                         <li><%= link_to 'Create task', new_task_path, data: { no_turbolink: true } %></li>
                         <li><%= link_to 'Download Icon', download_image_path %><li>
                         <li class="divider"></li>
