--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,25 +3,13 @@
 <head>
   <title>Hope</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <% if (user_signed_in? && current_user.style == 1) %>
-    <%= stylesheet_link_tag 'bootstrap_light.min.css' %>
-  <% end %>
+  <%= render "layouts/second_style" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body class = "center">
   <%= render "layouts/navbar" %>
-  <% if flash[:notice] %>
-    <div class="alert alert-info" role="alert"><%= flash[:notice] %></div>
-  <% end %>
-  <% if flash[:message] %>
-    <div class="alert alert-info" role="alert"><%= flash[:message] %></div>
-  <% end %>
-  <% if flash[:error] %>
-    <% flash[:error].each do |key, value|%>
-      <div class="alert alert-danger" role="alert"><b><%= key.to_s.capitalize + " " + value.join(", ") %></b></div>
-    <% end %>
-  <% end %>
+  <%= render "layouts/flash" %>
 
   <%= yield %>
 
