--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,12 +1,11 @@
 <div class="row">
   <div class="col-xs-8">
-    <h1>Main Page:<h1>
+    <div class="col-xs-offset-1">
+      <h1>Main Page:<h1>
+    </div>
   </div>
   <div class="col-xs-4">
-    <div class="tags"> 
-      <% most_used_tags.each do |tag| %>
-        <%= link_to tag.name, { :action => :search, :q => tag.name } %>
-      <% end %>
-    </div>
+    <% @tags = most_used_tags%>
+    <%= render "tags/index" %>
   </div>
 </div>
