--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,60 +1,16 @@
-<% my_task = my_task?(@task, current_user)%>
-<div hidden>
-asdfasdf
-</div>
 <div class="row">
   <div class="col-xs-3">
     <div class="col-xs-offset-1">
-      <h1><%= @task.title %></h1>
-      creator: 
-      <%= link_to @task.user.name,  user_path(@task.user) %>
-      <% if current_user.rate_task?(@task) %>
-        <div id="star">
-          <%= Rating.average_rating(@task.id) %><%= image_tag("star-on.png") %>
-        </div>
-      <% else %>
-        <div id="user_star"></div>
-      <% end %>
+      <%= render "task_basic_information"%>
     </div>
   </div>
   <div class="col-xs-6">
-    <div class="tags">
-      <% @task.tags.each { |tag| %> <%= link_to tag.name, { :controller => :application, :action => :search, :q => tag.name } %> <% } %>
-    </div>
-    <%= markdown(@task.description) %>
-    <% @task.comments.each do |comment|%>
-      <div class="well">
-        <% if current_user.my_comment?(comment) %>
-          <button class="close">&times;</button>
-          <%= link_to 'Delete', comment_path(comment), method: :delete, 
-                      class: "hidden", data: { confirm: "Are you sure?" } %> 
-        <% end %>
-        <%= link_to comment.user.name, user_path(comment.user) %><br>
-        <%= comment.message %>
-      </div>  
-    <% end %>
-    <br>
-    <div>
-      <%= render "comments/new" %>
-    </div>
+    <%= render "detail_information" %>
   </div>  
   <div class="col-xs-3">
     <div "row">
       <div class="col-xs-9">
-        <% if my_task %>
-          | <%= link_to 'Delete', task_path(@task), method: :delete, data: { confirm: "Are you sure?" } %> 
-          | <%= link_to 'Edit', edit_task_path(@task), data: { no_turbolink: true } %>
-          <div id = "answers">
-            <%= render "answers/index"%>
-            <%= render "answers/add_button"%>
-          </div>
-        <% else %>
-          <% if !current_user.solved?(@task)%>
-            <%= link_to "Answer", new_answer_attempt_path, remote: true, class: "AnswerAttempt" %>
-          <% else %>
-            <%= image_tag("done.png") %>
-          <% end %>
-        <% end %>
+        <%= render "task_controls"%>
       </div>
     </div>
   </div>
