--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,11 @@
 <div class="row">
   <div class="col-xs-2">
-    <h1>Users</h1>
+    <div class="col-xs-offset-1">
+      <h1>Users:</h1>
+    </div>
   </div>
   <div class="col-xs-7">
-    <% @users.each do |user| %>
-      <ul>
-        <li><%= link_to user.email, user_path(user) %></li>
-      </ul>
-    <% end %>
+    <%= render "index" %>
     <%= paginate @users %>
   </div>
 </div>
