small Models and Controller restructure

--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,5 +1,7 @@
-<% @comment = Comment.new %>
-<%= simple_form_for @comment do |f| %>
-  <%= f.input :message, label: false %>
-  <%= f.button :submit, "Comment" %>
-<% end %>
+<div class="commentField">
+  <% @comment = Comment.new %>
+  <%= simple_form_for @comment, html: { id: :commentform } do |f| %>
+    <%= f.input :message, label: false %>
+    <%= f.button :submit, "Comment" %>
+  <% end %>
+</div>
