--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,11 +1,17 @@
 <div class="row">
-  <div class="col-xs-8">
+  <div class="col-xs-3">
     <div class="col-xs-offset-1">
-      <h1>Main Page:<h1>
+      <h1>Main Page<h1>
     </div>
   </div>
+  <div class="col-xs-5">
+    <div class="col-xs-offset-1">
+      <%= render "main_page_information"%>
+    </div>
+  </div>  
   <div class="col-xs-4">
     <% @tags = most_used_tags%>
     <%= render "tags/index" %>
   </div>
+
 </div>
